--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-calendars": "^1.1307.0",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-vector-icons": "^10.2.0",
     "yarn": "^1.22.22"
   },
   "devDependencies": {
